apps/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: linuxserver/jellyfin:10.11.11
          ports:
            - containerPort: 8096
              name: http
            - containerPort: 8920
              name: https
            - containerPort: 1900
              protocol: UDP
              name: dlna
            - containerPort: 7359
              protocol: UDP
              name: discovery
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /data/media
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: media
          persistentVolumeClaim:
            claimName: jellyfin-media
