apps/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
  annotations:
    metallb.universe.tf/allow-shared-ip: jellyfin
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.202
  ports:
    - port: 8096
      targetPort: 8096
      name: http
      protocol: TCP
    - port: 8920
      targetPort: 8920
      name: https
      protocol: TCP
    - port: 1900
      targetPort: 1900
      name: dlna
      protocol: UDP
    - port: 7359
      targetPort: 7359
      name: discovery
      protocol: UDP
  selector:
    app: jellyfin
